IMP-2085 - Activate video screen - wording alignment should be corrected

--- a/web/src/main/webapp/assets/mobile/o2/css/mobile-ie.css
+++ b/web/src/main/webapp/assets/mobile/o2/css/mobile-ie.css
@@ -1648,6 +1648,7 @@ p.itemsTrackName {
 
 .videoNotOptedInHeader > div {
 	padding-top: 1px;
+	padding-left: 44px;
 }
 
 .videoNotOptedInHeaderSmall {
